# commit-creator

./: .gitignore  Cargo.toml  README.md
.githooks/: commit-msg
docs/: comandos.md  commands.md  daily-usage.md  distribution.md  installing-rust.md  prerequisites.md  roadmap.md  troubleshooting.md  validacao.md  validation.md
src/: main.rs
